# swift-lmdb

./: CMakeLists.txt  Package.swift
Sources/: CMakeLists.txt
Sources/CLMDB/: CMakeLists.txt
Sources/CLMDB/include/: module.modulemap
cmake/modules/: CMakeLists.txt  LMDBConfig.cmake.in
